# lockbook

./: .gitignore
clients/android/: settings.gradle
clients/android/app/: build.gradle
clients/android/app/lockbook/egui-editor/src/main/java/app/lockbook/egui_editor/: EGUIEditor.kt
clients/android/app/src/main/java/app/lockbook/: App.kt
clients/android/app/src/main/java/app/lockbook/model/: TextEditorViewModel.kt
clients/android/app/src/main/java/app/lockbook/screen/: TextEditorFragment.kt
clients/android/app/src/main/java/app/lockbook/util/: MarkdownEditor.kt
clients/android/app/src/main/res/layout/: fragment_text_editor.xml
clients/android/egui-editor/: build.gradle
clients/android/egui-editor/src/main/java/app/lockbook/egui_editor/: EGUIEditor.kt
clients/apple/Shared/: LockbookApp.swift
clients/apple/Shared/Stateful Logic/: DI.swift  SearchService.swift
libs/editor/SwiftEditor/Sources/Editor/: iOSMTK.swift
libs/editor/egui_editor/: Cargo.toml  create_android_libs.sh
libs/editor/egui_editor/src/: java_ffi.rs  lib.rs
libs/editor/egui_editor/src/android/: java_ffi.rs  keyboard.rs  mod.rs
