[package]
name = "egui_editor"
version = "0.7.6"
edition = "2021"

[features]
debug-window = ["eframe"]

[lib]
name = "egui_editor"
crate-type = ["lib", "staticlib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "egui"
path = "src/main.rs"

[dependencies]
egui = "0.22.0"
egui_wgpu_backend = "0.24.0"
image = "0.24"
libc = "0.2"
pulldown-cmark = { version = "0.9.2", default-features = false }
reqwest = { version = "0.11", features = ["blocking"] }
unicode-segmentation = "1.10.0"
rand = "0.8.5"
jni = "0.21.1"
ndk-sys = "*"
pollster = "0.2"
raw-window-handle = "0.5"

#eframe = { version = "0.19.0", optional = true, default-features = false, features = ['wgpu', 'dark-light'] }
eframe = { version = "0.22.0", optional = true }

